<resources>
    <string name="app_name">아키텍쳐 테스트</string>
    <string name="action_send">전송</string>

    <string name="logout">로그아웃</string>
    <string name="retry">재시도</string>
    <string name="login_success">로그인에 성공하셨습니다.</string>
    <string name="logout_success">로그아웃 되었습니다.</string>
    <string name="no_internet">인터넷이 연결되지 않았습니다.</string>
    <string name="no_login_text">로그인 후 회원님만을 위한\n콘텐츠를 확인하세요!</string>
    <string name="go_login">로그인하기</string>
    <string name="no_contents">목록이 없습니다.</string>

    <!-- 로그인 팝업 -->
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="sns_login">SNS계정으로 간편로그인</string>
    <string name="panda_login">팬더티비 로그인</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="save_id">아이디 저장</string>
    <string name="auto_login">자동 로그인</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>

    <!-- 회원가입 팝업 -->
    <string name="sns_join">SNS계정으로 간편가입</string>
    <string name="panda_join">팬더티비 회원가입</string>
    <string name="pw_re">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="id_check">6~15자 이내의 문자/숫자</string>
    <string name="pw_check">8~15자 이내의 대,소문자,특수문자!@#$%^&amp;*</string>
    <string name="nick_check">2~12자 이내의 문자/숫자</string>
    <string name="all_agree">전체동의</string>
    <string name="agree1">[필수] 서비스 이용약관 동의</string>
    <string name="agree2">[필수] 개인정보 처리방침 동의</string>
    <string name="agree3">[필수] 만 14세 이상입니다.</string>
    <string name="agree4">[선택] 무료하트 및 하트 이벤트 정보 알림에 동의</string>

    <string name="join_success">회원가입이 완료되었습니다.</string>

    <string name="warning_loginMust">로그인이 필요합니다.</string>
    <string name="warning_recaptcha">자동 접속 방지</string>
    <string name="warning_needAdult">본인인증이 필요합니다.</string>
    <string name="warning_wrongId">아이디를 확인해주세요.</string>
    <string name="warning_wrongPw">비밀번호를 확인해주세요.</string>
    <string name="warning_existsId">이미 사용중인 아이디 입니다.</string>
    <string name="warning_wrongNick">잘못된 닉네임입니다.</string>
    <string name="warning_existsNick">이미 사용중인 닉네임 입니다.</string>
    <string name="warning_noid">존재하지 않는 아이디입니다.</string>
    <string name="warning_dormant">해당 계정은 휴먼상태 입니다.</string>
    <string name="warning_nopw">비밀번호가 잘못 입력되었습니다.</string>
    <string name="warning_overlap">연속가입 방지</string>
    <string name="warning_blockWord">금칙어가 입력되었습니다.</string>
    <string name="warning_pw_format">비밀번호 형식이 맞지 않습니다.</string>
    <string name="warning_pw_match">입력한 비밀번호와 다릅니다.</string>
    <string name="warning_unknown">알수없는 오류가 발생하였습니다.</string>
    <string name="warning_auto_login">자동 로그인에 실패하였습니다.</string>

    <!-- 검색 페이지 -->
    <string name="search_hint">BJ명 또는 제목을 입력해 주세요.</string>
    <string name="search_live_tab">LIVE방송</string>
    <string name="search_bj_tab">BJ</string>

    <string name="search_shot_length">검색어는 2자이상 입력해주세요.</string>
    <string name="search_no_result">검색 결과가 없습니다.</string>


    <string name="sorting_best">인기순</string>
    <string name="sorting_new">최신순</string>
    <string name="sorting_view">시청순</string>
</resources>