<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils"/>

        <variable
            name="signViewModel"
            type="com.example.cleanarchitectureexample.view.login.SignDialogViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/fill_white_radius_bottom_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="5sp"
                android:text="@string/sns_join"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sns_google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/sns_google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/sns_google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/sns_google" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/line_light_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="5sp"
                android:text="@string/panda_join"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/id"
                app:helperText="@string/id_check"
                style="@style/AppEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppEditTextAppearance"
                    android:text="@={signViewModel.joinIdText}"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:hint="@string/pw"
                app:helperText="@string/pw_check"
                style="@style/AppEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppEditTextAppearance"
                    android:text="@={signViewModel.joinPwText}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:hint="@string/pw_re"
                app:helperText="@string/pw_re"
                style="@style/AppEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppEditTextAppearance"
                    android:text="@={signViewModel.joinPwReText}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:hint="@string/nickname"
                app:helperText="@string/nick_check"
                style="@style/AppEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppEditTextAppearance"
                    android:text="@={signViewModel.joinNickText}"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/border_line_grey_radius_5"
                    android:paddingLeft="20dp"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:onClick="@{() -> signViewModel.onAllAgree()}"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@{signViewModel.allAgree ? @drawable/checkbox_01_on : @drawable/checkbox_01}"
                        tools:src="@drawable/checkbox_01"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/all_agree"

                        android:layout_marginLeft="12dp"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:onClick="@{() -> signViewModel.onServiceAgree()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{signViewModel.agree1 ? @drawable/checkbox_02_on : @drawable/checkbox_02}"
                            tools:src="@drawable/checkbox_02"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree1"
                            android:layout_marginLeft="17dp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/sample_icon"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:onClick="@{() -> signViewModel.onPrivacyAgree()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{signViewModel.agree2 ? @drawable/checkbox_02_on : @drawable/checkbox_02}"
                            tools:src="@drawable/checkbox_02"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree2"
                            android:layout_marginLeft="17dp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/sample_icon"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:onClick="@{() -> signViewModel.onAdultConsentAgree()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{signViewModel.agree3 ? @drawable/checkbox_02_on : @drawable/checkbox_02}"
                            tools:src="@drawable/checkbox_02"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree3"
                            android:layout_marginLeft="17dp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/sample_icon"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:onClick="@{() -> signViewModel.onFreeHeartAgreement()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{signViewModel.agree4 ? @drawable/checkbox_02_on : @drawable/checkbox_02}"
                            tools:src="@drawable/checkbox_02"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree4"
                            android:layout_marginLeft="17dp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/sample_icon"/>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_default"
                android:text="@string/join"
                android:textColor="@color/white"
                android:enabled="@{!TextUtils.isEmpty(signViewModel.joinIdText) &amp;&amp; !TextUtils.isEmpty(signViewModel.joinPwText) &amp;&amp; !TextUtils.isEmpty(signViewModel.joinPwReText) &amp;&amp; !TextUtils.isEmpty(signViewModel.joinNickText) ? true : false}"
                tools:enabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>