<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.cleanarchitectureexample.view.search.SearchViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="12dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_back"
                tools:ignore="ContentDescription"
                android:onClick="@{() -> vm.backClick()}"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/search"
                android:layout_toEndOf="@+id/back"
                android:background="@color/transfer"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:gravity="center_vertical"
                android:hint="@string/search_hint"
                android:text="@={vm.searchText}"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_search"
                android:onClick="@{() -> vm.searchClick()}"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/disable_button_background"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:theme="@style/TabTheme"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            app:tabTextAppearance="@style/TabItemText"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_live_tab" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_bj_tab" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="62dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_none"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:gravity="center"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/search_no_result"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>